set(PACKAGE_NAME cdsu-map)

set(CDSUNIT_MAP_SOURCES
    map_find_int.cpp
    map_find_int_bronsonavltree.cpp
    map_find_int_cuckoo.cpp
    map_find_int_ellentree.cpp
    map_find_int_michael.cpp
    map_find_int_skip.cpp
    map_find_int_split.cpp
    map_find_int_striped.cpp
    map_find_int_refinable.cpp
    map_find_int_std.cpp
    map_find_string.cpp
    map_find_string_bronsonavltree.cpp
    map_find_string_cuckoo.cpp
    map_find_string_ellentree.cpp
    map_find_string_michael.cpp
    map_find_string_skip.cpp
    map_find_string_split.cpp
    map_find_string_striped.cpp
    map_find_string_refinable.cpp
    map_find_string_std.cpp
    map_insfind_int.cpp
    map_insfind_int_bronsonavltree.cpp
    map_insfind_int_cuckoo.cpp
    map_insfind_int_ellentree.cpp
    map_insfind_int_michael.cpp
    map_insfind_int_skip.cpp
    map_insfind_int_split.cpp
    map_insfind_int_striped.cpp
    map_insfind_int_refinable.cpp
    map_insfind_int_std.cpp
    map_insdel_func.cpp
    map_insdel_func_michael.cpp
    map_insdel_func_split.cpp
    map_insdel_func_skip.cpp
    map_insdel_func_ellentree.cpp
    map_insdel_func_bronsonavltree.cpp
    map_insdel_func_striped.cpp
    map_insdel_func_refinable.cpp
    map_insdel_func_cuckoo.cpp
    map_insdel_int.cpp
    map_insdel_int_michael.cpp
    map_insdel_int_split.cpp
    map_insdel_int_skip.cpp
    map_insdel_int_ellentree.cpp
    map_insdel_int_bronsonavltree.cpp
    map_insdel_int_striped.cpp
    map_insdel_int_refinable.cpp
    map_insdel_int_cuckoo.cpp
    map_insdel_item_int.cpp
    map_insdel_item_int_michael.cpp
    map_insdel_item_int_split.cpp
    map_insdel_item_int_skip.cpp
    map_insdel_item_int_ellentree.cpp
    map_insdel_item_int_bronsonavltree.cpp
    map_insdel_item_int_striped.cpp
    map_insdel_item_int_refinable.cpp
    map_insdel_item_int_cuckoo.cpp
    map_insdel_item_string.cpp
    map_insdel_item_string_michael.cpp
    map_insdel_item_string_split.cpp
    map_insdel_item_string_skip.cpp
    map_insdel_item_string_ellentree.cpp
    map_insdel_item_string_bronsonavltree.cpp
    map_insdel_item_string_striped.cpp
    map_insdel_item_string_refinable.cpp
    map_insdel_item_string_cuckoo.cpp
    map_insdel_string.cpp
    map_insdel_string_michael.cpp
    map_insdel_string_split.cpp
    map_insdel_string_skip.cpp
    map_insdel_string_ellentree.cpp
    map_insdel_string_bronsonavltree.cpp
    map_insdel_string_striped.cpp
    map_insdel_string_refinable.cpp
    map_insdel_string_cuckoo.cpp
    map_insdel_string_std.cpp
    map_insdelfind.cpp
    map_insdelfind_michael.cpp
    map_insdelfind_split.cpp
    map_insdelfind_skip.cpp
    map_insdelfind_ellentree.cpp
    map_insdelfind_bronsonavltree.cpp
    map_insdelfind_striped.cpp
    map_insdelfind_refinable.cpp
    map_insdelfind_cuckoo.cpp
    map_insdelfind_std.cpp
    map_delodd.cpp
    map_delodd_michael.cpp
    map_delodd_bronsonavltree.cpp
    map_delodd_ellentree.cpp
    map_delodd_split.cpp
    map_delodd_skip.cpp
    map_delodd_cuckoo.cpp
)

add_executable(${PACKAGE_NAME} ${CDSUNIT_MAP_SOURCES} $<TARGET_OBJECTS:${TEST_COMMON}>)
target_link_libraries(${PACKAGE_NAME} ${CDS_SHARED_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
add_test(NAME ${PACKAGE_NAME} COMMAND ${PACKAGE_NAME})